--- a/src/App.css
+++ b/src/App.css
@@ -59,8 +59,7 @@
 
 .input-container {
   width: 80%;
-  margin: 0 auto;
-  margin-bottom: 16px;
+  margin: 8px 50px 8px;
 }
 
 .todo-list {
@@ -87,7 +86,12 @@
   position: relative;
 }
 
-
+.todo-item span, input {
+  max-width: 350px;
+  overflow-wrap: break-word;
+  height: auto;
+  word-break: break-word;
+}
 
 
 
@@ -128,9 +132,9 @@
 
 .button1 {
   position: absolute;
-  top: 56px;
-  right: 24px;
-  padding: 0.75rem 2rem;
+  top: 65.5px;
+  right: 46px;
+  padding: 0.65rem 2rem;
   font-size: 1.1 rem;
   border: none;
   border-radius: 8px;
@@ -195,15 +199,24 @@
 }
 
 .edit-input {
+  display: block;
   background: #fff;
   color: #222;
   border: 1px solid #bbb;
   border-radius: 6px;
+  padding: 0.3rem 0.7rem;
   font-size: 1rem;
+  margin-right: 8px;
   outline: none;
   box-shadow: none;
-  width: 27rem;
+ width: 350px;
+ resize: none;
+ height: auto;
+  word-break: break-word;
+  white-space: pre-wrap;
 }
+  
+
 
 
 #root {
